--- a/index.html
+++ b/index.html
@@ -15,5 +15,15 @@
             <p>Website launching soon.</p><p>In the meantime, visit us on <a href="https://www.facebook.com/potpourricakes">Facebook</a>.</p>
         </div>
     </div>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  ga('create', 'UA-288075-10', 'auto');
+  ga('require', 'linkid', 'linkid.js');
+  ga('send', 'pageview');
+</script>
+<script src="js/outbound.js"></script>
 </body>
 </html>
